--- a/public/cart.css
+++ b/public/cart.css
@@ -4,3 +4,38 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
+#full-cart {
+    background-color: red;
+    width: 80vw;
+    height: 85vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#cart-items {
+    background-color: aqua;
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+}
+
+.cart-card {
+    background-color: #BFCC94;
+    width: 100%;
+    margin-top: 15px;
+}
+
+#cart-img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+#order-form {
+    background-color:#BFCC94;
+    width: 300px;
+    height: 400px;
+}
