--- a/public/cart.css
+++ b/public/cart.css
@@ -6,36 +6,164 @@ body {
 }
 
 #full-cart {
-    background-color: red;
     width: 80vw;
-    height: 85vh;
+    min-height: 85vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 #cart-items {
-    background-color: aqua;
-    width: 700px;
+    width: 750px;
     display: flex;
     flex-direction: column;
 }
 
 .cart-card {
     background-color: #BFCC94;
+    color: #0D1821;
+    box-sizing: border-box;
     width: 100%;
-    margin-top: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 5px;
+    position: relative;
 }
 
-#cart-img {
+.cart-img {
     width: 100px;
     height: 100px;
     object-fit: cover;
     border-radius: 5px;
 }
 
+.cart-title {
+    width: 275px;
+    font-family: 'Jura', sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+}
+
+.cart-a-c {
+    width: 150px;
+    height: 75px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.cart-a-c > p {
+    font-family: 'Jura', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.cart-price {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+}
+
+.delete {
+    background-color: red;
+    width: 20px;
+    height: 20px;
+    display: none;
+    border-radius: 50px;
+    border: 0px;
+    text-align: center;
+    position: absolute;
+    top: -5px;
+    right: -5px;
+}
+
+.delete:hover {
+    cursor: pointer;
+    box-shadow: 0px 3px 3px 0px grey;
+}
+
+/* Order Form ------------------------------------------------ */
+
 #order-form {
     background-color:#BFCC94;
-    width: 300px;
+    color: #0D1821;
+    font-family: 'Jura', sans-serif;
+    width: 250px;
     height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 5px;
+}
+
+#totals {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#cart-total {
+    font-weight: 600;
+    font-size: 32px;
+    margin-bottom: 10px;
+}
+
+#order-total {
+    font-weight: 400;
+    font-size: 24px;
+}
+
+#order-tax {
+    font-weight: 400;
+    font-size: 24px;
+}
+
+#ship-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#ship-info > p {
+    font-weight: 300;
+    font-size: 24px;
+}
+
+#ship-info > p:hover {
+    color: #F0F4EF;
+}
+
+#ship-title {
+    width: 100px;
+    font-weight: 500;
+    font-size: 24px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.inter {
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+#finish {
+    background-color: #0D1821;
+    color: #F0F4EF;
+    width: 150px;
+    height: 100px;
+    font-family: 'Jura', sans-serif;
+    font-size: 32px;
+    border-radius: 5px;
+    border: 0px;
+}
+
+#finish:hover {
+    cursor: pointer;
+    box-shadow: 0px 3px 3px 0px grey;
 }
