--- a/public/home.css
+++ b/public/home.css
@@ -114,6 +114,11 @@ body {
     padding: 5px;
 }
 
+.option:hover {
+    cursor: pointer;
+    box-shadow: 0px 3px 3px 0px grey;
+}
+
 .choice {
     width: 120px;
     margin: 5px;
@@ -147,4 +152,9 @@ body {
     text-align: center;
     border-radius: 5px;
     border: 0px;
+}
+
+#add-to-cart:hover {
+    cursor: pointer;
+    box-shadow: 0px 3px 3px 0px grey;
 }
