--- a/public/header.css
+++ b/public/header.css
@@ -31,6 +31,10 @@ header {
     cursor: pointer;
 }
 
+#not:hover {
+    color: #0D1821;
+}
+
 #to-cart {
     background-color: #344966;
     background-image: url('./images/cart.png');
@@ -39,4 +43,12 @@ header {
     height: 75px;
     border: 0px;
     margin: 20px;
+}
+
+.jura {
+    font-family: 'Jura', sans-serif;
+}
+
+.inter {
+    font-family: 'Inter', sans-serif;
 }
