--- a/public/cart.css
+++ b/public/cart.css
@@ -1,10 +1,3 @@
-body {
-    background-color: #F0F4EF;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 #full-cart {
     width: 80vw;
     min-height: 85vh;
@@ -17,6 +10,11 @@ body {
     width: 750px;
     display: flex;
     flex-direction: column;
+}
+
+#empty-cart {
+    text-align: center;
+    font-size: 28px;
 }
 
 .cart-card {
