--- a/public/header.css
+++ b/public/header.css
@@ -1,3 +1,11 @@
+body {
+    background-color: #F0F4EF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-x: hidden;
+}
+
 header {
     background-color: #344966;
     width: 100vw;
