--- a/public/home.css
+++ b/public/home.css
@@ -78,6 +78,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    margin-bottom: 15px;
 }
 
 .h2o-just-add-water {
